--- a/data/home/about.toml
+++ b/data/home/about.toml
@@ -13,7 +13,7 @@ I come up with creative ideas that are immediately required in demanding situati
     url = "https://github.com/warisamin"
 [[link]]
     icon = "fab fa-linkedin"
-    url = "www.linkedin.com/in/warisamin"
+    url = "https://www.linkedin.com/in/warisamin"
 [[link]]
     icon = "fas fa-envelope"
     url = "mailto:warisamin@gmail.com"
